eks/ingress/spring-ingress.yaml
#apiVersion: networking.k8s.io/v1
#kind: IngressClass
#metadata:
#  name: alb-ingress-class
#spec:
#  controller: ingress.k8s.aws/alb
#---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    name: spring-ingress
spec:
  ingressClassName: "alb-ingress-class"
  rules:
  - host: dev.joon-test.shop
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: spring-service
              port:
                number: 8080
